# mcmps

./: CMakeLists.txt  README.md
client/: auth.cpp  auth.h  client_config.json  connection.cpp  connection.h  execution.cpp  execution.h  gpu_support.cpp  gpu_support.h  worker.cpp  worker.h
client/asm/: arm_execution.s  x86_execution.s
docs/: API_reference.md  architecture.md  security.md  setup_guide.md
scripts/: start_client.sh  start_server.sh
server/: main.cpp
server/api/: auth.cpp  auth.h  distribute.cpp  distribute.h  monitoring.cpp  monitoring.h  monitoring.hpp  security.cpp  security.h  security.hpp
server/config/: logging.conf  settings.json
server/core/: CodeManager.cpp  CodeManager.hpp  task_manager.cpp  task_manager.h  virtual_cpu.cpp  virtual_cpu.h  virtual_cpu.hpp  virtual_gpu.cpp  virtual_gpu.h  virtual_ram.cpp  virtual_ram.h  virtual_ram.hpp
server/network/: tcp_ip.cpp  tcp_ip.h  websocket.cpp  websocket.h
server/utils/: encryptor.cpp  encryptor.h  error_handler.cpp  error_handler.h
tests/: test_client.cpp  test_security.cpp  test_server.cpp
